--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -156,6 +156,13 @@
             android:summary="@string/pref_summary_quickreply_mark_read"
             android:title="@string/pref_title_quickreply_mark_read"
             android:dependency="pref_key_enable_notifications" />
+
+        <CheckBoxPreference
+            android:defaultValue="false"
+            android:key="pref_key_resume_sleep_from_qr"
+            android:summary="@string/pref_summary_quickreply_resume_sleep"
+            android:title="@string/pref_title_quickreply_resume_sleep" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
