Mms: Enable SoftBank emoji encoding
This adds an option to enable SoftBank emoji encoding when inserting
emoji into SMS/MMS message.

There is nothing wrong with the default Unicode emoji encoding other
than the fact that most Japanese carriers does not support it as they
have their own coding conversion tables. The option toggles to SoftBank
encoding, the decoding both Unicode and SoftBank-codeed emoji is
alredy working correctly (both code tables are already part of the
src/com/android/mms/util/EmojiParser.java). Unicode encoding will
stay the default.

Change-Id: I51326842bbe3e1a5b31521261544d49bae1a7766
Signed-off-by: rdgate <rdgate@gmail.com>

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -192,7 +192,15 @@
             android:summary="@string/pref_summary_pref_key_emojis_quick"
             android:dependency="pref_key_enable_emojis"
             android:defaultValue="false" />
+
+        <CheckBoxPreference
+            android:key="pref_key_enable_softbank_encoding"
+            android:title="@string/pref_title_enable_softbank_encoding"
+            android:summary="@string/pref_summary_enable_softbank_encoding"
+            android:dependency="pref_key_enable_emojis"
+            android:defaultValue="false" />
     </PreferenceCategory>
+
     <PreferenceCategory android:title="@string/pref_extra_settings">
     <CheckBoxPreference android:key="pref_key_strip_unicode"
         android:title="@string/pref_title_strip_unicode"
