stop mistaken texts (like Gmail undo send feature)
This feature adds an optional delay when sending messages
 in the application. The delay can be changed.When the
countdown is running, it is possible to stop the message
before dispatch by clicking on the item in the message list.

Note: It's been only tested with SMS messages for now.
But using this for MMS messages should be a piece of cake
(it's not included because I don't want tocommit something
without testing it before-hand).

Only issue:
It is not possible to delay the first message of a
conversation, because the conversation is created when
 the first message is sent to the framework service.
 As a consequence, the countdown will not be used for
the first message of a conversation.

----------------------------------------------------------------------------------------

Cherry-picked from opendesign github
https://github.com/opendesign/android_packages_apps_Mms/commit/b4ef47a73dd237e45fce4853bcbd472c3aca66fb

PS2: update commit message
PS3 : fix build (a refactor of  msgItem -> mMessageItem
      had happened between ICS and JB that was not
      considered while cherry-picking this )

Change-Id: Id9544efd50319dec17b57352522eadf16f8431f8
Signed-off-by: ChampionSwimmer <android@championswimmer.tk>

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -76,4 +76,16 @@
     <string-array name="empty_subject_strings">
         <item>no subject</item>
     </string-array>
+
+    <string-array name="pref_key_sms_send_countdown_labels">
+       <item>3 seconds</item>
+       <item>5 seconds</item>
+       <item>10 seconds</item>
+    </string-array>
+
+    <string-array name="pref_key_sms_send_countdown_values">
+       <item>3000</item>
+       <item>5000</item>
+       <item>10000</item>
+    </string-array>
 </resources>
