--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -168,6 +168,12 @@
             android:summary="@string/pref_summary_quickreply_resume_sleep"
             android:title="@string/pref_title_quickreply_resume_sleep" />
 
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_key_open_ime"
+            android:summary="@string/pref_summary_open_ime"
+            android:title="@string/pref_title_open_ime" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
